@@ -87,6 +87,7 @@
 						</tr>
 					</tbody>
 				</table>
+<input type="checkbox" class="checkbox" onclick="toggle_animation(this)" title="Enable / disable animation"/><span>Animation</span>
 			</div>
 		</center>
 	</body>
